--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,8 @@
       The nav bar that will be updated as we navigate between views.
     -->
     <ion-nav-bar class="bar bar-header bar-positive flat">
-      <ion-nav-back-button class="button button-icon icon ion-star flat pull-left">
+      <ion-nav-back-button class="button-clear">
+        <i class="ion-chevron-left"></i> Back
       </ion-nav-back-button>
     </ion-nav-bar>
 
